<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home_menu"/>
    <item
        android:id="@+id/navigation_news"
        android:enabled="true"
        android:icon="@drawable/ic_news"
        android:title="@string/news_menu"/>
    <item
        android:id="@+id/navigation_scan"
        android:enabled="true"
        android:icon="@drawable/ic_scan"
        android:title="@string/scan_menu"/>
    <item
        android:id="@+id/navigation_history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/history_menu"/>
    <item
        android:id="@+id/menuProfile"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile_menu"/>
</menu>