<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.forgot.ForgotPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <ImageView
            android:id="@+id/imgForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_login"
            android:src="@drawable/image_verification"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:alpha="0.4"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/titleForgotPasswordActivity" />

        <TextView
            android:id="@+id/titleForgotPasswordActivity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/forgot_password_menu"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:fontFamily="@font/poppins_bold"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@+id/imgForgotPassword"/>

        <TextView
            android:id="@+id/descForgotPasswordActivity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/desc_forgot_password_activity"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/dark_gray"
            app:layout_constraintTop_toBottomOf="@+id/titleForgotPasswordActivity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="16dp"
            android:textColorHint="@color/light_gray"
            android:hint="@string/emailHint"
            android:fontFamily="@font/poppins_regular"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descForgotPasswordActivity"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/light_gray"
            app:boxStrokeColor="@color/light_gray"
            app:hintTextColor="@color/light_gray">

            <com.capstone.hay.costum.CostumeEditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/light_gray"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="@string/btn_confirm"
            android:backgroundTint="@color/orange"
            android:layout_marginTop="32dp"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="72dp"
            android:textSize="14sp"
            android:textColor="@color/spring_wood_color"
            android:fontFamily="@font/poppins_semibold"
            app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/hayLogo"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/hay_icon"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnConfirm"
            android:contentDescription="@string/description_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


